--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:migrate:deploy": "prisma migrate deploy",
     "db:studio": "prisma studio",
     "db:generate": "prisma generate"
   },
@@ -18,7 +20,9 @@
     "clamscan": "^2.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.1",
     "googleapis": "^153.0.0",
+    "graphile-worker": "^0.16.6",
     "imapflow": "^1.0.191",
     "lucide-react": "^0.525.0",
     "mailparser": "^3.7.4",
@@ -40,6 +44,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
     "tailwindcss": "^4",
+    "tsx": "^4.20.3",
     "turbo": "^2.5.5",
     "typescript": "^5"
   }
