--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "db:migrate": "prisma migrate dev",
     "db:migrate:deploy": "prisma migrate deploy",
     "db:studio": "prisma studio",
-    "db:generate": "prisma generate"
+    "db:generate": "prisma generate",
+    "worker": "node scripts/start-worker.mjs",
+    "worker:setup": "node scripts/setup-graphile-worker.js"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
