--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
-    "@prisma/client": "^6.12.0",
+    "@prisma/client": "^6.13.0",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.7",
@@ -27,12 +27,16 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@tus/file-store": "^2.0.0",
+    "@tus/server": "^2.3.0",
+    "@types/formidable": "^3.4.5",
     "clamscan": "^2.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cron-parser": "^5.3.0",
     "cronstrue": "^3.2.0",
     "dotenv": "^17.2.1",
+    "formidable": "^3.5.4",
     "googleapis": "^153.0.0",
     "graphile-worker": "^0.16.6",
     "imapflow": "^1.0.191",
@@ -40,10 +44,11 @@
     "mailparser": "^3.7.4",
     "next": "15.4.1",
     "next-auth": "^5.0.0-beta.29",
-    "prisma": "^6.12.0",
+    "node-mbox": "^2.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tus-js-client": "^4.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -55,6 +60,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
+    "prisma": "^6.13.0",
     "tailwindcss": "^4",
     "tsx": "^4.20.3",
     "turbo": "^2.5.5",
