--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "prettier": "3.6.2",
     "prisma": "^6.13.0",
     "tailwindcss": "^4",
+    "tsc-alias": "^1.8.16",
     "tsx": "^4.20.3",
     "turbo": "^2.5.5",
     "typescript": "^5"
