--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,10 @@ services:
       - POSTGRES_DB=mailstash
       - POSTGRES_USER=mailstash
       - POSTGRES_PASSWORD=mailstash_password
+      - LC_ALL=C.UTF-8
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./scripts/init-db.sh:/docker-entrypoint-initdb.d/01-init.sh:ro
     healthcheck:
       test: ['CMD-SHELL', 'pg_isready -U mailstash -d mailstash']
       interval: 10s
