--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "next": "15.4.1",
     "next-auth": "^5.0.0-beta.29",
     "node-mbox": "^2.0.0",
+    "p-retry": "^7.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
