--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "clsx": "^2.1.1",
     "cron-parser": "^5.3.0",
     "cronstrue": "^3.2.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "formidable": "^3.5.4",
     "googleapis": "^153.0.0",
