--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@tanstack/react-query": "^5.90.2",
     "@tus/file-store": "^2.0.0",
     "@tus/server": "^2.3.0",
     "@types/formidable": "^3.4.5",
